--- a/src/Coalesce.Starter.Web/Coalesce/Originals/Templates/CreateEditView.cshtml
+++ b/src/Coalesce.Starter.Web/Coalesce/Originals/Templates/CreateEditView.cshtml
@@ -156,9 +156,9 @@
 
         @(obj).saveCallbacks.push(function(obj){
             // If there is a new id, set the one for this page
-            if (!intellitect.utilities.GetUrlParameter('id')){
+            if (!Coalesce.Utilities.GetUrlParameter('id')){
                 if (@(obj).myId){
-                    var newUrl = intellitect.utilities.SetUrlParameter(window.location.href, "id", @(obj).myId);
+                    var newUrl = Coalesce.Utilities.SetUrlParameter(window.location.href, "id", @(obj).myId);
                     window.history.replaceState(null, window.document.title, newUrl);
                 }
             }
