--- a/src/Coalesce.Starter.Web/Styles/site.scss
+++ b/src/Coalesce.Starter.Web/Styles/site.scss
@@ -52,7 +52,7 @@ span.select2-container--default .select2-selection--single .select2-selection__a
     height: 30px;
 }
 
-.select2-container {
+span.select2.select2-container {
     width: 100% !important;
 }
 
